--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "ajv": "^8.6.1",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "ajv": "^8.6.1"  
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
