--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "concurrently": "^9.1.0",
+    "electron-devtools-installer": "^3.2.0",
     "framer-motion": "^11.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
