Add TypeScript interfaces for various components and update import paths

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,7 @@
       "slices/*": ["./src/slices/*"],
       "ui/*": ["./src/ui/*"],
       "theme/*": ["./src/theme/*"],
+      "page/*": ["./src/page/*"],
     },
 
     /* Linting */
